fix(index.html, about.html, apply.html) & feat(style.css): fixed nav, and ensured nav and logo don't overlap when screen size changed

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,6 +129,18 @@ header {
     padding-bottom: 1em;
 }
 
+@media (max-width: 1230px) {
+    header {
+        justify-content: flex-start;
+    }
+}
+
+header div {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
 header img {
     width: 7em;
     height: auto;
